frontend: Add zero register constraint annotation